Closed
Bug 768626
Opened 13 years ago
Closed 13 years ago
Add missing PropertyId rooting methods
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: terrence, Assigned: terrence)
Details
(Whiteboard: [js:t])
Attachments
(2 files)
|
3.71 KB,
patch
|
Waldo
:
review+
|
Details | Diff | Splinter Review |
|
2.29 KB,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
These are needed for the rooting analysis and for exact stack rooting.
Attachment #636854 -
Flags: review?(jwalden+bmo)
Updated•13 years ago
|
Attachment #636854 -
Flags: review?(jwalden+bmo) → review+
| Assignee | ||
Comment 1•13 years ago
|
||
Comment 2•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
Comment 3•13 years ago
|
||
gcc disagrees:
js/src/jsgc.cpp: In function ‘void js::MarkExactStackRoots(JSTracer*)’:
js/src/jsgc.cpp:883:100: error: cannot convert ‘jsid’ to ‘jsid*’ for argument ‘2’ to ‘void js::gc::MarkIdRoot(JSTracer*, jsid*, const char*)’
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 4•13 years ago
|
||
Attachment #638422 -
Flags: review?(jwalden+bmo)
| Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 638422 [details] [diff] [review]
Followup to fix PropertyId exact root marking
Review of attachment 638422 [details] [diff] [review]:
-----------------------------------------------------------------
Sorry about the bustage. I put the equivalent to this patch in my tree last night, but didn't have internet today to upload it.
Attachment #638422 -
Flags: review?(jwalden+bmo) → review+
Updated•13 years ago
|
Whiteboard: [js:t]
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 13 years ago → 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•