Bug 768626 - Add rooting analysis for PropertyId; r=Waldo